# CGNAT-DPDK-ISP

./: .gitignore  LICENSE  QUICKSTART.md  README.md  meson.build
.github/RUNBOOKS/: email-domains-security-runbook.md
config/: cgnat.yaml
docs/: ARCHITECTURE.md  CLOUD_TESTING.md  DEPLOYMENT.md
include/: cgnat_types.h  dpdk_runtime.h  nat_engine.h  telemetry.h
scripts/: aws-cloud-setup.sh  setup.sh
src/: main.c
src/control/: api_server.c  config.c
src/dpdk/: runtime.c
src/logging/: logger.c
src/nat/: engine.c
src/telemetry/: metrics.c  prometheus.c
ui/: dashboard.html
